tests/specs/run/wasm_source_phase_imports_with_type_bytes/main.out
error: Importing Wasm modules with { type: "bytes" } at source phase is unsupported.
  Specifier: [WILDLINE]/math.wasm
    at [WILDLINE]/main.ts:1:31
