tests/specs/run/wasm_source_phase_imports_with_type_bytes/main.ts
import source mathSource from "./math.wasm" with { type: "bytes" };
